general/src/pii/snapshots/tests__sanitize_url_1.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "foo": "pg://matt:[Filtered]@localhost/1"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@urlauth:legacy",
              "s",
              10,
              20
            ]
          ],
          "len": 26
        }
      }
    }
  }
}
