general/src/pii/snapshots/tests__sanitize_url_7.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "foo": "{\"a\":\"https://localhost\",\"b\":\"foo@localhost\",\"c\":\"pg://matt:[Filtered]@localhost/1\",\"d\":\"lol\"}"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@urlauth:legacy",
              "s",
              60,
              70
            ]
          ],
          "len": 88
        }
      }
    }
  }
}
